...
            "state" : "translated",
            "value" : "Change"
          }
        }
      }
    },
    "Cancelar" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
...
            "state" : "translated",
            "value" : "Create your first item to start"
          }
        }
      }
    },
    "Crea tu primer elemento!" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Create your first item!"
...
            "state" : "translated",
            "value" : "Create a new one"
          }
        }
      }
    },
    "Crear" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Create"
          }
        }
      }
    },
    "Crear y Continuar" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Create and Continue"
...
            "state" : "translated",
            "value" : "Vista de Lista"
          }
        }
      }
    },
    "Listo" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
...
